index HTML shows temp and precipitation no styling yet

--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-RusskayaMorda
+<!DOCTYPE html>
+
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel='stylesheet' href="./css/index.css"/>
+        <title>Weather forecast</title>
+    </head>
+    <body>
+        <section id="forecast">
+            <section id="temperature"><h2>Average daily temperature</h2></section>
+            <section id="precipitation"><h2>Precipitation</h2></section>
+        </section>
+    </body>
+    <script src="./js/index.js"></script>
+</html>
